force-app/main/default/objects/Movie__c/fields/Movie_Poster__c.field-meta.xml
<CustomField>
    <fullName>Movie_Poster__c</fullName>
    <label>Movie Poster</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>