force-app/main/default/objects/Movie__c/fields/Poster_Source__c.field-meta.xml
<CustomField>
    <fullName>Poster_Source__c</fullName>
    <label>Poster Source</label>
    <type>Url</type>
</CustomField>